--- a/style.css
+++ b/style.css
@@ -161,8 +161,11 @@ a {
     padding: 0.75rem 1rem;
      border-radius: 5px;
     font-weight: bold;
+    text-align: center;
+    display: block;
     width: 100%;
     box-sizing: border-box;
+    margin: 0 auto;
       }
 
  p, li, address {
@@ -197,6 +200,11 @@ footer {
     margin-bottom: 0.5rem;
     color: white;
       }
+
+      .gallery-container {
+        max-width: 400px;
+        margin: 0 auto;
+      }
 .gallery-card {
     background-color: var(--color-linen);
     padding: 1rem;
@@ -214,6 +222,7 @@ footer {
     font-family: var(--font-main);
     font-size: 0.9rem;
     color: var(--color-midnight-blue);
+    text-align: center;
       }
 
 footer address {
