--- a/style.css
+++ b/style.css
@@ -272,7 +272,21 @@ footer a {
     }
 
     .offering-card{
-        flex: 1 1 calc(50% - 1rem);
+        width: calc(50% - 1rem);
+        margin-bottom: 1rem;
+        text-align: left;
+    }
+
+    .offering-card:nth-child(3) {
+        width: 100%;
+        text-align: center;
+    }
+
+    .offering-container {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: 1rem;
     }
 
     .gallery-container ul{
@@ -295,5 +309,10 @@ footer a {
         font-weight: bold;
         margin-top: 1rem;
         border-radius: 4px;
+    }
+
+    .gallery-card img {
+        width: 100%;
+        height: auto;
     }
 }
