--- a/style.css
+++ b/style.css
@@ -85,6 +85,8 @@ main {
       
 section {
     margin-bottom: 2rem;
+    border-bottom: 4px solid var(--color-champagne-gold);
+    padding-bottom: 2rem;
       }
 h1 {
     font-size: 2rem;
