--- a/style.css
+++ b/style.css
@@ -61,6 +61,8 @@ header p {
 
 nav{
     background-color: var(--color-champagne-gold);
+    width: 100%;
+    padding: 1rem 0;
 }
       
 nav ul {
@@ -68,7 +70,7 @@ nav ul {
     justify-content: center;
     gap: 2rem;
     list-style: none;
-    padding: 1rem 0;
+    padding: 0;
     margin: 0;
       }
       
