--- a/style.css
+++ b/style.css
@@ -62,9 +62,12 @@ header p {
 nav{
     background-color: var(--color-champagne-gold);
     width: 100%;
-    padding: 1rem 0;
+    padding: 1.25rem 0;
+    margin: 0;
+    border-top: 4px solid var(--color-champagne-gold);
 }
       
+
 nav ul {
     display: flex;
     justify-content: center;
@@ -78,7 +81,9 @@ nav a {
     text-decoration: none;
     color: var(--color-midnight-blue);
     font-weight: bold;
-    font-size: 1rem;
+    font-size: 1.15rem;
+    padding: 0.5rem 1rem;
+    display: inline-block;
       }
       
 main {
