--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ header {
     background-color: var(--color-midnight-blue);
     color: white;
     text-align: center;
-    padding: 1rem;
+    padding: 1rem 1rem 0 1rem;
       }
       
  header img {
