--- a/style.css
+++ b/style.css
@@ -61,8 +61,8 @@ header p {
 
 nav{
     background-color: var(--color-champagne-gold);
-    width: 100%;
-    padding: 1.25rem 0;
+    width: 100vw;
+    padding: 0;
     margin: 0;
     border-top: 4px solid var(--color-champagne-gold);
 }
@@ -71,6 +71,7 @@ nav{
 nav ul {
     display: flex;
     justify-content: center;
+    align-items: center;
     gap: 2rem;
     list-style: none;
     padding: 0;
@@ -82,7 +83,7 @@ nav a {
     color: var(--color-midnight-blue);
     font-weight: bold;
     font-size: 1.15rem;
-    padding: 0.5rem 1rem;
+    padding: 0.75rem 1rem;
     display: inline-block;
       }
       
