--- a/style.css
+++ b/style.css
@@ -75,16 +75,19 @@ nav ul {
     list-style: none;
     padding: 0;
     margin: 0;
+    height: 48px;
       }
       
 nav a {
     text-decoration: none;
     color: var(--color-midnight-blue);
     font-weight: bold;
-    font-size: 1.4rem;
-    padding: 1rem 2rem;
-    display: inline-block;
+    font-size: 1.25rem;
+    padding: 0 1rem;
+    display: flex;
     line-height: 1;
+    align-items: center;
+    height: 100%;
       }
       
 main {
