--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ header p {
 
 nav{
     background-color: var(--color-champagne-gold);
-    width: 100vw;
+    width: 100%;
     padding: 0;
     margin: 0;
 }
