--- a/style.css
+++ b/style.css
@@ -61,9 +61,12 @@ header p {
 
 nav{
     background-color: var(--color-champagne-gold);
-    width: 100%;
-    padding: 0;
-    margin: 0;
+    position: relative;
+    left: 50%;
+    right: 50%;
+    width: 100vw;
+    margin-left: -50vw;
+    margin-right: -50vw;
 }
       
 
