--- a/style.css
+++ b/style.css
@@ -229,7 +229,7 @@ footer {
       }
 .gallery-card {
     background-color: var(--color-linen);
-    padding: 1rem;
+    padding: 0;
     border-radius: 8px;
     box-shadow: 0 2px 5px rgba(0,0,0,0.1);
     margin-bottom: 1rem;
