--- a/style.css
+++ b/style.css
@@ -366,6 +366,26 @@ footer a {
     }
 
     .gallery-container li {
-        width: calc(45% - 1rem);
+        width: calc(33.333% - 1.66rem);
+    }
+
+    .gallery-container ul {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 2.5rem;
+        padding: 0;
+    }
+
+    .gallery-card figcaption {
+        padding: 0.75rem 1rem;
+    }
+
+    .offering-container {
+        gap: 2rem;
+    }
+
+    #gallery p:last-of-type {
+        max-width: 300px;
+        margin: 1rem auto 0 auto;
     }
 }
