--- a/style.css
+++ b/style.css
@@ -365,6 +365,12 @@ footer a {
         gap: 6rem;
     }
 
+    .gallery-container {
+        width: 100%;
+        max-width: 1200px;
+        margin: 0 auto;
+    }
+
     .gallery-container li {
         width: calc(33.333% - 1.66rem);
     }
