--- a/style.css
+++ b/style.css
@@ -354,7 +354,7 @@ footer a {
 /* MEDIA QUERY (XL) */
   
 @media (min-width: 1200px) {
-    nav ul{
-        gap: 6rem;
-    }
+   body {
+    background-color: yellow;
+   }
 }
